--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -13,3 +13,10 @@
   height: 200px;
   width: 200px;
 }
+
+@media screen and (max-width: 996px) {
+  .features {
+    padding: 2rem;
+    height: auto;
+  }
+}
